# MPPI-GPU-CPU

./: .gitignore  CLAUDE.md  Mppi-solver分步计算架构.md  README.md
ros2_ws/: build_rk3588.sh
ros2_ws/src/cuda_mppi_controller/: CMakeLists.txt  README.md  cuda_mppi_plugin.xml  package.xml
ros2_ws/src/cuda_mppi_controller/config/: cuda_mppi_params.example.yaml  nav2_loopback_demo.yaml  nav2_loopback_demo_ackermann.yaml  nav2_loopback_demo_omni.yaml
ros2_ws/src/cuda_mppi_controller/include/cuda_mppi_controller/: cuda_mppi_controller.hpp  mppi_backend.hpp  mppi_gpu.hpp  mppi_solver.hpp  nav2_compat.hpp
ros2_ws/src/cuda_mppi_controller/src/: cuda_mppi_controller.cpp  mppi_optimizer.cpp  mppi_solver.cpp
ros2_ws/src/cuda_mppi_controller/src/backends/: cpu_backend.cpp  opencl_backend.cpp
ros2_ws/src/cuda_mppi_controller/src/kernels/: mppi_distance_field.cl  mppi_reduction.cl  mppi_rng.cl  mppi_rollout.cl
ros2_ws/src/cuda_mppi_controller/test/: controller_benchmark.cpp  mppi_gpu_standalone.cpp  mppi_opencl_standalone.cpp  parameter_validation_test.cpp  plugin_load_test.cpp
ros2_ws/src/mppi_controller/: CMakeLists.txt  README.md  mppi_plugin.xml  package.xml
ros2_ws/src/mppi_controller/config/: nav2_loopback_demo.yaml
ros2_ws/src/mppi_controller/include/mppi_controller/: mppi_backend.hpp  mppi_controller.hpp  mppi_gpu.hpp  mppi_solver.hpp  nav2_compat.hpp
ros2_ws/src/mppi_controller/src/: mppi_controller.cpp  mppi_optimizer.cpp  mppi_solver.cpp
ros2_ws/src/mppi_controller/src/backends/: cpu_backend.cpp  opencl_backend.cpp
ros2_ws/src/mppi_controller/src/kernels/: mppi_cost.cl  mppi_distance_field.cl  mppi_rng.cl
ros2_ws/src/mppi_controller/test/: mppi_gpu_standalone.cpp  mppi_opencl_standalone.cpp  parameter_validation_test.cpp  plugin_load_test.cpp
ros2_ws/src/opencl_mppi_controller/: CMakeLists.txt  README.md  mppi_plugin.xml  package.xml
ros2_ws/src/opencl_mppi_controller/config/: mppi_params.example.yaml  nav2_loopback_demo_ackermann.yaml  nav2_loopback_demo_omni.yaml
ros2_ws/src/opencl_mppi_controller/include/opencl_mppi_controller/: mppi_backend.hpp  mppi_controller.hpp  mppi_gpu.hpp  mppi_solver.hpp  nav2_compat.hpp
ros2_ws/src/opencl_mppi_controller/src/: mppi_controller.cpp  mppi_optimizer.cpp  mppi_solver.cpp
ros2_ws/src/opencl_mppi_controller/src/backends/: cpu_backend.cpp  opencl_backend.cpp
ros2_ws/src/opencl_mppi_controller/test/: controller_benchmark.cpp  mppi_gpu_standalone.cpp  mppi_opencl_standalone.cpp  parameter_validation_test.cpp
