<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencl_mppi_controller</name>
  <version>0.1.0</version>
  <description>OpenCL-accelerated MPPI controller plugin for Nav2 (RK3588 Mali-G610, 1 work-item = 1 rollout)</description>
  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- CPU baseline loaded at runtime by the head-to-head benchmark -->
  <exec_depend>nav2_mppi_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/mppi_plugin.xml" />
  </export>
</package>
